<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:text="@string/Minesweeper"
            android:textColor="#FF0008"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-16dp" />

        <TextView
            android:id="@+id/BestTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Title" />

        <TextView
            android:id="@+id/CurrentTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="TextView"
            app:layout_constraintTop_toBottomOf="@+id/BestTime"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:text="@string/Difficulty"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/BestTime"
            tools:layout_editor_absoluteX="0dp" />

        <RadioButton
            android:id="@+id/Easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/EASY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <RadioButton
            android:id="@+id/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MEDIUM"
            app:layout_constraintStart_toStartOf="@+id/Easy"
            app:layout_constraintTop_toBottomOf="@+id/Easy" />

        <RadioButton
            android:id="@+id/Hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HARD"
            app:layout_constraintStart_toStartOf="@+id/Medium"
            app:layout_constraintTop_toBottomOf="@+id/Medium" />

        <TextView
            android:id="@+id/Or"
            android:layout_width="46dp"
            android:layout_height="22dp"
            android:layout_marginTop="184dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/OR"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="#11ECDA"
            android:text="@string/Custom"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:backgroundTint="#17DFDF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Or" />

        <EditText
            android:id="@+id/Rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="Enter number of rows"
            android:inputType="number"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <EditText
            android:id="@+id/Columns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter number of columns"
            android:inputType="number"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/Rows"
            app:layout_constraintTop_toBottomOf="@+id/Rows" />

        <EditText
            android:id="@+id/Mines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter number of mines"
            android:inputType="number"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/Columns"
            app:layout_constraintTop_toBottomOf="@+id/Columns" />

        <Button
            android:id="@+id/START"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/START"
            android:textColor="#FFFFFF"
            app:backgroundTint="#17DFDF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Mines" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>