<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Board">

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="#000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/TIME"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="@+id/TIME"
            app:layout_constraintTop_toBottomOf="@+id/TIME" />

        <TextView
            android:id="@+id/MINES"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:text="@string/MINES"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/Restart"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TIME"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TIME"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/Restart"
            app:layout_constraintTop_toTopOf="@+id/Restart" />

        <Button
            android:id="@+id/Restart"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#DAB524"
            android:fontFamily="sans-serif-black"
            android:text="@string/RESTART"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#C320FF"
            app:iconTint="#BF3131"
            app:layout_constraintEnd_toStartOf="@+id/TIME"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/MINES"
            app:layout_constraintTop_toTopOf="@+id/MINES" />

        <TextView
            android:id="@+id/MINESVALUE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="40dp"
            android:text="TextView"
            android:textColor="#000000"
            android:textColorHighlight="#797E4242"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/MINES" />

        <LinearLayout
            android:id="@+id/Board"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp"></LinearLayout>

        <Button
            android:id="@+id/Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-black"
            android:text="Share best time"
            android:textColor="#000000"
            android:visibility="invisible"
            app:backgroundTint="#C320FF"
            app:layout_constraintEnd_toStartOf="@+id/timer"
            app:layout_constraintHorizontal_bias="0.527"
            app:layout_constraintStart_toEndOf="@+id/MINESVALUE"
            app:layout_constraintTop_toBottomOf="@+id/Restart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>